force-app/main/default/objects/Product2/fields/AV_Activo__c.field-meta.xml
<CustomField>
    <fullName>AV_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de activo</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>