force-app/main/default/objects/Product2/fields/AV_Amount__c.field-meta.xml
<CustomField>
    <fullName>AV_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Importe</description>
    <label>Amount</label>
    <type>Checkbox</type>
</CustomField>