force-app/main/default/objects/Product2/fields/AV_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>AV_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matricula</description>
    <label>Enrollment</label>
    <type>Checkbox</type>
</CustomField>