force-app/main/default/objects/Product2/fields/AV_Entity__c.field-meta.xml
<CustomField>
    <fullName>AV_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Entidad</description>
    <label>Entity</label>
    <type>Checkbox</type>
</CustomField>