force-app/main/default/objects/Product2/fields/AV_Expiration__c.field-meta.xml
<CustomField>
    <fullName>AV_Expiration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vencimiento</description>
    <label>Expiration</label>
    <type>Checkbox</type>
</CustomField>