force-app/main/default/objects/Product2/fields/AV_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>AV_ExternalID__c</fullName>
    <description>Identificador CAIXA</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>AV ID Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>