force-app/main/default/objects/Product2/fields/AV_FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>AV_FeeAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuota</description>
    <label>Fee Amount</label>
    <type>Checkbox</type>
</CustomField>