force-app/main/default/objects/Product2/fields/AV_InterestRate__c.field-meta.xml
<CustomField>
    <fullName>AV_InterestRate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tipo de interés</description>
    <label>Interest Rate</label>
    <type>Checkbox</type>
</CustomField>