force-app/main/default/objects/Product2/fields/AV_NewReportActions__c.field-meta.xml
<CustomField>
    <fullName>AV_NewReportActions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Si el valor del campo es true las acciones que aparecen en los reportes serán ‘Producto Contratado’ y ‘Producto Rechazado’ y si es false aparecerán ‘Cerrada positiva’ y ‘Cerrada negativa’</description>
    <label>Nuevas acciones en el reporte</label>
    <type>Checkbox</type>
</CustomField>