force-app/main/default/objects/Product2/fields/AV_Nivel__c.field-meta.xml
<CustomField>
    <fullName>AV_Nivel__c</fullName>
    <description>Nivel del producto</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nivel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>