force-app/main/default/objects/Product2/fields/AV_NombrePF__c.field-meta.xml
<CustomField>
    <fullName>AV_NombrePF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nombre del Producto Ficha</description>
    <label>Nombre Producto Ficha</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>