force-app/main/default/objects/Product2/fields/AV_PEA__c.field-meta.xml
<CustomField>
    <fullName>AV_PEA__c</fullName>
    <description>Clave/identificador del punto de acceso</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PEA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>