force-app/main/default/objects/Product2/fields/AV_Profesional__c.field-meta.xml
<CustomField>
    <fullName>AV_Profesional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si es profesional</description>
    <label>Profesional</label>
    <type>Checkbox</type>
</CustomField>