force-app/main/default/objects/Product2/fields/AV_Tipo__c.field-meta.xml
<CustomField>
    <fullName>AV_Tipo__c</fullName>
    <description>Tipo de producto:
Activo (I – Inversion )
Pasivo (R – Recurso)
Servicio (S – Servicio)</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Activo</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Pasivo</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Servicio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>