force-app/main/default/objects/Product2/fields/AV_TipoPEA__c.field-meta.xml
<CustomField>
    <fullName>AV_TipoPEA__c</fullName>
    <description>Tipologia del punto de acceso, valor numerico (enlace externo, enlace intranet, OAPC, enlace tf)</description>
    <label>Tipo PEA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>