force-app/main/default/objects/Product2/fields/AV_URLArgumentario__c.field-meta.xml
<CustomField>
    <fullName>AV_URLArgumentario__c</fullName>
    <description>URL Argumentario</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Argumentario</label>
    <type>Url</type>
</CustomField>