force-app/main/default/objects/Product2/fields/AV_Variables__c.field-meta.xml
<CustomField>
    <fullName>AV_Variables__c</fullName>
    <description>Texto con Varibles de acceso al enlace</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Variables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>