force-app/main/default/objects/Product2/fields/AV_Visible__c.field-meta.xml
<CustomField>
    <fullName>AV_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Para evitar que se creen nuevas oportunidades con un cierto producto que se quiera anular sin eliminar todo el producto.</description>
    <label>Visible Alta Oportunidad</label>
    <type>Checkbox</type>
</CustomField>