force-app/main/default/objects/Product2/fields/CIBE_CamposOppProduct__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CamposOppProduct__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campos Oportunidad-Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>