force-app/main/default/objects/Product2/fields/CIBE_Familia__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Familia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familia</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Familia)</relationshipLabel>
    <relationshipName>Familias</relationshipName>
    <type>Lookup</type>
</CustomField>