force-app/main/default/objects/Product2/recordTypes/AV_PF.recordType-meta.xml
<RecordType>
    <fullName>AV_PF</fullName>
    <active>true</active>
    <label>PF</label>
</RecordType>