force-app/main/default/objects/Product2/recordTypes/AV_Producto.recordType-meta.xml
<RecordType>
    <fullName>AV_Producto</fullName>
    <active>true</active>
    <label>Producto</label>
</RecordType>