force-app/main/default/objects/Product2/recordTypes/CIBE_Familia.recordType-meta.xml
<RecordType>
    <fullName>CIBE_Familia</fullName>
    <active>true</active>
    <label>Familia</label>
</RecordType>