force-app/main/default/objects/Product2/recordTypes/CIBE_Producto.recordType-meta.xml
<RecordType>
    <fullName>CIBE_Producto</fullName>
    <active>true</active>
    <label>Producto CIB</label>
</RecordType>