force-app/main/default/objects/Product2/validationRules/AV_ProductName.validationRule-meta.xml
<ValidationRule>
    <fullName>AV_ProductName</fullName>
    <active>true</active>
    <description>Validation rule para evitar la modificación del product name de la listView URL Argumentario</description>
    <errorConditionFormula>ISCHANGED(Name) &amp;&amp;
    !$Permission.AV_AvoidBulkApi &amp;&amp;
    !$Permission.AV_ByPassValidationRules &amp;&amp;
    !$Permission.CBK_BypassValidationRules</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>No es posible modificar el nombre del producto</errorMessage>
</ValidationRule>